books/projects/rac/tests/yaml_test/data_types/references.ref.stderr
references.cpp:3 (11-12): syntax error, unexpected '&', expecting ID
  3 | int foo(int& ptr)
    |            ^
